--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,13 +89,13 @@
     <string name="there_is_no_online_delivery">Δεν υπάρχει διαθέσιμος ντελιβερας αυτη τη στιγμή</string>
     <string name="dialog_no_online_ok">Δεν βιάζομαι</string>
     <string name="dialog_no_online_no">Ακύρωση</string>
+    <string name="price_label">1.80€</string>
 
 
     <!-- for Firebase Database reference -->
     <string name="ref_users">Users</string>
     <string name="ref_products">Products</string>
     <string name="ref_category">Categories</string>
-    <string name="ref_tokens">Tokens</string>
     <string name="ref_profileImage">ProfileImage</string>
     <!--for firebase database Users reference -->
     <string name="ref_users_profileImage">profileImage</string>
@@ -106,5 +106,11 @@
     <string name="ref_category_user_profile_image_url">categoryImageUrl</string>
     <string name="ref_category_desc">categoryDesc</string>
     <string name="ref_category_name">categoryName</string>
-    <string name="ref_category_id">CategoryId</string>
+    <string name="ref_category_id">categoryId</string>
+    <!-- for firebase database Products reference -->
+    <string name="ref_product_image_url">productImageUrl</string>
+    <string name="ref_product_desc">productDesc</string>
+    <string name="ref_product_name">productName</string>
+    <string name="ref_product_price">productPrice</string>
+    <string name="ref_product_id">productId</string>
 </resources>
