updated admin tab for adding categories inside app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="logout_title">Αποσύνδεση</string>
     <string name="home_title">Κεντρική</string>
     <string name="profile_title">Επεξεργασία προφίλ</string>
+    <string name="admin_title">Διαχείριση</string>
     <string name="input_name">Όνομα</string>
     <string name="input_street">Οδός</string>
     <string name="input_floor">Όροφος</string>
@@ -73,6 +74,7 @@
     <string name="post_added_successful">Επιτυχής προσθήκη</string>
     <string name="profession_label" translatable="false">profession</string>
     <string name="are_you_sure_to_delete_post_label">Είστε σίγουροι ότι θέλετε να το διαγράψετε;</string>
+    <string name="delete_label">Διαγραφή</string>
     <string name="dialog_yes">Ναι</string>
     <string name="dialog_no">Οχι</string>
     <string name="notification_send_to_shop">Έρχομαι</string>
@@ -88,7 +90,6 @@
     <string name="is_currently">είναι πλέον</string>
     <string name="there_is_no_online_delivery">Δεν υπάρχει διαθέσιμος ντελιβερας αυτη τη στιγμή</string>
     <string name="dialog_no_online_ok">Δεν βιάζομαι</string>
-    <string name="dialog_no_online_no">Ακύρωση</string>
     <string name="price_label">1.80€</string>
 
 
@@ -103,14 +104,44 @@
     <string name="ref_users_street">street</string>
     <string name="ref_users_floor">floor</string>
     <!-- for firebase database Categories reference -->
-    <string name="ref_category_user_profile_image_url">categoryImageUrl</string>
+    <string name="ref_category_image_url">categoryImageUrl</string>
     <string name="ref_category_desc">categoryDesc</string>
     <string name="ref_category_name">categoryName</string>
     <string name="ref_category_id">categoryId</string>
+    <string name="ref_category_position">categoryPosition</string>
     <!-- for firebase database Products reference -->
     <string name="ref_product_image_url">productImageUrl</string>
     <string name="ref_product_desc">productDesc</string>
     <string name="ref_product_name">productName</string>
     <string name="ref_product_price">productPrice</string>
     <string name="ref_product_id">productId</string>
+
+    <!-- for AdminFragment labels -->
+    <string name="category_admin_label">Κατηγορίες</string>
+    <string name="product_admin_label">Προϊόντα</string>
+    <string name="category_admin_add_btn_label">Προσθήκη Κατηγορίας</string>
+    <string name="product_admin_add_btn_label">Προσθήκη Προϊόντος</string>
+    <string name="category_admin_add_btn_ok_label">Προσθήκη Νέας Κατηγορίας</string>
+    <string name="cancel_admin_btn_label">Ακύρωση</string>
+    <string name="category_name_textInput_hint">Προσθήκη Ονόματος Κατηγορίας</string>
+    <string name="category_disc_textInput_hint">Προσθήκη Περιγραφής Κατηγορίας</string>
+    <string name="category_img_url_textInput_hint">Προσθήκη Link για Photo Κατηγορίας</string>
+    <string name="successful_add_of_category">Επιτυχής Προσθήκη Κατηγορίας</string>
+
+    <string name="edit_category_name_textInput_hint">Ανανέωση Ονόματος Κατηγορίας</string>
+    <string name="edit_category_disc_textInput_hint">Ανανέωση Περιγραφής Κατηγορίας</string>
+    <string name="edit_category_img_url_textInput_hint">Ανανέωση Link για Photo Κατηγορίας</string>
+    <string name="edit_successful_add_of_category">Επιτυχής Ανανέωση Κατηγορίας</string>
+    <string name="edit_category_admin_add_btn_ok_label">Ανανέωση Κατηγορίας</string>
+
+    <string name="name_is_not_valid">Το Όνομα δεν είναι Σωστό</string>
+    <string name="desc_is_not_valid">Η περιγραφή δεν είναι Σωστή</string>
+    <string name="image_url_is_not_valid">Το Ulr της φωτογραφίας δεν ειναι Σωστό</string>
+
+    <string name="alertdialog_title_image_not_valid_label">Δεν έχετε επιλέξει εικόνα</string>
+    <string name="alertdialog_message_image_not_valid_label">Δεν έχετε βάλει καποιο link για εικόνα</string>
+    <string name="are_you_sure_to_delete_category_title_label">Προσοχή</string>
+    <string name="are_you_sure_to_delete_category_message_label">Είστε σίγουροι οτι θέλετε να διαγράψετε την κατηγορία;</string>
+
+
 </resources>
