--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,38 +110,73 @@
     <string name="ref_category_id">categoryId</string>
     <string name="ref_category_position">categoryPosition</string>
     <!-- for firebase database Products reference -->
-    <string name="ref_product_image_url">productImageUrl</string>
-    <string name="ref_product_desc">productDesc</string>
+    <string name="ref_product_id">productId</string>
     <string name="ref_product_name">productName</string>
     <string name="ref_product_price">productPrice</string>
-    <string name="ref_product_id">productId</string>
+    <string name="ref_product_category_id">productCategoryId</string>
 
     <!-- for AdminFragment labels -->
     <string name="category_admin_label">Κατηγορίες</string>
     <string name="product_admin_label">Προϊόντα</string>
-    <string name="category_admin_add_btn_label">Προσθήκη Κατηγορίας</string>
-    <string name="product_admin_add_btn_label">Προσθήκη Προϊόντος</string>
-    <string name="category_admin_add_btn_ok_label">Προσθήκη Νέας Κατηγορίας</string>
+
     <string name="cancel_admin_btn_label">Ακύρωση</string>
+
+    <!--for add categories hints -->
     <string name="category_name_textInput_hint">Προσθήκη Ονόματος Κατηγορίας</string>
     <string name="category_disc_textInput_hint">Προσθήκη Περιγραφής Κατηγορίας</string>
     <string name="category_img_url_textInput_hint">Προσθήκη Link για Photo Κατηγορίας</string>
-    <string name="successful_add_of_category">Επιτυχής Προσθήκη Κατηγορίας</string>
+    <string name="successful_edit_of_category">Επιτυχής Ανανέωση Κατηγορίας</string>
 
+    <!--for add products hints -->
+    <string name="product_name_textInput_hint">Προσθήκη Ονόματος Προϊόντος</string>
+    <string name="product_price_textInput_hint">Προσθήκη Τιμής Προϊόντος</string>
+    <string name="product_category_id_textInput_hint">Προσθήκη Κατηγορίας Προϊόντος</string>
+    <string name="successful_edit_of_product">Επιτυχής Ανανέωση Κατηγορίας</string>
+
+    <!--for add categories labels -->
+    <string name="successful_add_of_category">Επιτυχής Προσθήκη Κατηγορίας</string>
+    <string name="category_admin_add_btn_label">Προσθήκη Κατηγορίας</string>
+    <string name="category_admin_add_btn_ok_label">Προσθήκη Νέας Κατηγορίας</string>
+
+    <!--for add products labels -->
+    <string name="successful_add_of_product">Επιτυχής Προσθήκη προϊόντος</string>
+    <string name="product_admin_add_btn_label">Προσθήκη Προϊόντος</string>
+    <string name="product_admin_add_btn_ok_label">Προσθήκη Νέου Προϊόντος</string>
+
+
+    <!--for edit categories hints -->
     <string name="edit_category_name_textInput_hint">Ανανέωση Ονόματος Κατηγορίας</string>
     <string name="edit_category_disc_textInput_hint">Ανανέωση Περιγραφής Κατηγορίας</string>
     <string name="edit_category_img_url_textInput_hint">Ανανέωση Link για Photo Κατηγορίας</string>
     <string name="edit_successful_add_of_category">Επιτυχής Ανανέωση Κατηγορίας</string>
     <string name="edit_category_admin_add_btn_ok_label">Ανανέωση Κατηγορίας</string>
 
+    <!--for edit products hints-->
+    <string name="edit_product_name_textInput_hint">Ανανέωση Ονόματος προϊόντος</string>
+    <string name="edit_product_price_textInput_hint">Ανανέωση Τιμής προϊόντος</string>
+    <string name="edit_product_category_id_textInput_hint">Ανανέωση κατηγορίας που ανηκει το προϊόν</string>
+    <string name="edit_successful_add_of_product">Επιτυχής Ανανέωση προϊόντος</string>
+    <string name="edit_product_admin_add_btn_ok_label">Ανανέωση προϊόντος</string>
+
+    <!-- for showError categories -->
     <string name="name_is_not_valid">Το Όνομα δεν είναι Σωστό</string>
     <string name="desc_is_not_valid">Η περιγραφή δεν είναι Σωστή</string>
     <string name="image_url_is_not_valid">Το Ulr της φωτογραφίας δεν ειναι Σωστό</string>
 
+    <!-- for showError products -->
+    <string name="price_is_not_valid">Η τιμή δεν ειναι Σωστή</string>
+    <string name="product_category_id_is_not_valid">Η κατηνορία δεν ειναι Σωστή</string>
+
+    <!--for alertDialog categories -->
     <string name="alertdialog_title_image_not_valid_label">Δεν έχετε επιλέξει εικόνα</string>
     <string name="alertdialog_message_image_not_valid_label">Δεν έχετε βάλει καποιο link για εικόνα</string>
     <string name="are_you_sure_to_delete_category_title_label">Προσοχή</string>
     <string name="are_you_sure_to_delete_category_message_label">Είστε σίγουροι οτι θέλετε να διαγράψετε την κατηγορία;</string>
+
+    <!--for alertDialog products -->
+    <string name="are_you_sure_to_delete_product_title_label">Προσοχή</string>
+    <string name="are_you_sure_to_delete_product_message_label">Είστε σίγουροι οτι θέλετε να διαγράψετε το προϊόν;</string>
+
 
 
 </resources>
